fixed label visibility in ingredient selects

--- a/src/components/AddRecipeForm/IngredientItem/IngredientItem.module.scss
+++ b/src/components/AddRecipeForm/IngredientItem/IngredientItem.module.scss
@@ -2,8 +2,8 @@
 
 .item {
   display: flex;
-  // align-items: center;
-  justify-content: space-between;
+  align-items: center;
+  // justify-content: space-between;
 
   transition: color $transition-duration $transition-timing-function,
     border-color $transition-duration $transition-timing-function;
@@ -11,22 +11,27 @@
 
 .inputsWrapper {
   display: flex;
-  align-items: center;
+  // align-items: center;
   gap: 14px;
-  // background-color: gray;
 
   width: 100%;
+
   @media screen and (min-width: $mobile) and (max-width: ($desktop - 1)) {
     max-width: 496px;
   }
 }
 
-.label {
-  background-color: transparent;
+// .label {
+//   background-color: transparent;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: flex-start;
+//   gap: 4px;
+// }
+
+.removeButtonCnt {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 4px;
+  justify-content: center;
 }
 
 .removeButton {
@@ -34,8 +39,8 @@
   border: none;
   color: $accent;
   // height: 100%;
-  // min-height: 50px;
-  // background-color: blueviolet;
+  // width: 100%;
+  background-color: blueviolet;
 
   &:disabled {
     color: rgba($accent, 0.3);
