--- a/src/components/AddRecipeForm/SearchDropdown/SearchDropdown.module.scss
+++ b/src/components/AddRecipeForm/SearchDropdown/SearchDropdown.module.scss
@@ -4,6 +4,7 @@
   font-size: $input-placeholder;
   font-weight: $regular;
   letter-spacing: -0.32px;
+  background-color: green;
 }
 
 .label {
